--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,48 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
-
+name: GitHub Actions Build and Deploy Demo
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
+    branches:
+      - main
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    
+    # - name: Install SSH Client 🔑
+    #   uses: webfactory/ssh-agent@v0.5.4 # This step installs the ssh client into the workflow run. There's many options available for this on the action marketplace.
+    #   with:
+    #     ssh-private-key: ${{ secrets.AUTHINE_KEY }}
+
+    - name: Checkout
+      uses: actions/checkout@main
+      
+    - name: Install and Build 🔧
+      run: |
+        yarn
+        yarn build
+
+    - name: Deploy gh-pages 🚀
+      uses: JamesIves/github-pages-deploy-action@4.1.7
+      with:
+        ssh-key: ${{ secrets.AUTHINE_KEY }}
+        branch: gh-pages # The branch the action should deploy to.
+        folder: dist 
+      
+    - name: Deploy app 🚀
+      uses: JamesIves/github-pages-deploy-action@4.1.7
+      with:
+        ssh-key: ${{ secrets.AUTHINE_KEY }}
+        branch: master # The branch the action should deploy to.
+        folder: dist # The folder the action should deploy.
+        repository-name: smanx/app #允许您指定其他存储库路径
+        target-folder: atmaster #如果要将部署文件夹的内容推送到部署分支上的特定目录中，可以在此处指定
+        clean: true #每次部署时自动将其从Deployment分支中删除
+        # single-commit: true #如果您希望在部署分支上进行一次提交而不是保留完整的历史记录
+        
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.3.1
+      with:
+        # Artifact name
+        name: package
+        # A file, directory or wildcard pattern that describes what to upload
+        path: dist
